--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,11 @@
 .underline {
   text-decoration: underline;
 }
+
+.tooltip-row > td {
+  padding-left: 5px;
+}
+
+.tooltip-row > td:last-child {
+  padding-right: 5px;
+}
