--- a/src/css/App.css
+++ b/src/css/App.css
@@ -7,10 +7,14 @@
 }
 
 body {
-  margin-left: 5px;
+  margin-left: 10px;
   margin-top: 50px;
+  width: 100%;
   display: flex;
-  justify-content: center;
+}
+
+div#root {
+  margin: auto;
 }
 
 div.App {
